; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_oldstyle_param_args.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_oldstyle_param_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@localenv = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [42 x i8] c"K&R-style declarator expected, but got %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_oldstyle_param_args to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_oldstyle_param_args() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32*, i32** @localenv, align 8
  store i32* %3, i32** %1, align 8
  store i32* null, i32** @localenv, align 8
  %4 = call i32* (...) @make_vector()
  store i32* %4, i32** %2, align 8
  br label %5

5:                                                ; preds = %19, %0
  %6 = call i32 (...) @peek()
  %7 = call i64 @is_keyword(i32 %6, i8 signext 123)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  br label %22

10:                                               ; preds = %5
  %11 = call i32 (...) @peek()
  %12 = call i32 @is_type(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %10
  %15 = call i32 (...) @peek()
  %16 = call i32 (...) @peek()
  %17 = call i32 @tok2s(i32 %16)
  %18 = call i32 @errort(i32 %15, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %14, %10
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @read_decl(i32* %20, i32 0)
  br label %5

22:                                               ; preds = %9
  %23 = load i32*, i32** %1, align 8
  store i32* %23, i32** @localenv, align 8
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i32* @make_vector(...) #1

declare dso_local i64 @is_keyword(i32, i8 signext) #1

declare dso_local i32 @peek(...) #1

declare dso_local i32 @is_type(i32) #1

declare dso_local i32 @errort(i32, i8*, i32) #1

declare dso_local i32 @tok2s(i32) #1

declare dso_local i32 @read_decl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
